reset starting point

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         }
         buildTypes.each {
             it.buildConfigField "String", "DB_NAME", "\"dompet_db\""
+            it.buildConfigField "int", "MAX_ACCOUNT", "5"
         }
     }
 }
@@ -38,6 +39,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
@@ -69,6 +73,7 @@ dependencies {
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.tapadoo.android:alerter:5.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
 }
