splash and main menu

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
         buildTypes.each {
             it.buildConfigField "String", "DB_NAME", "\"dompet_db\""
             it.buildConfigField "int", "MAX_ACCOUNT", "5"
+            it.buildConfigField "String", "CURRENCY", "\"Rp\""
         }
     }
 }
