--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.addAccount.AddAccountActivity"></activity>
-
         <service
             android:name=".service.NotifService"
             android:enabled="true"
@@ -20,13 +18,16 @@
             android:process=":externalProcess"
             android:stopWithTask="false" />
 
-        <activity android:name=".ui.activity.mainMenu.MainMenuActivity">
+        <activity android:name=".ui.activity.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity android:name=".ui.activity.mainMenuActivity.MainMenuActivity"></activity>
+
     </application>
 
 </manifest>
