--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.expenseActivity.ExpenseActivity"></activity>
+        <activity android:name=".ui.activity.incomeActivity.IncomeActivity" />
+
         <service
             android:name=".service.NotifService"
             android:enabled="true"
@@ -24,10 +27,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".ui.activity.mainMenuActivity.MainMenuActivity"></activity>
-
+        <activity android:name=".ui.activity.mainMenuActivity.MainMenuActivity" />
     </application>
 
 </manifest>
