--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.expenseActivity.ExpenseActivity"></activity>
+        <activity android:name=".ui.activity.reportDiagramActivity.ReportDiagramActivity"></activity>
+        <activity android:name=".ui.activity.reportMenuActivity.ReportMenuActivity" />
+        <activity android:name=".ui.activity.expenseActivity.ExpenseActivity" />
         <activity android:name=".ui.activity.incomeActivity.IncomeActivity" />
 
         <service
